fixed packaging with weights

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,12 +1,14 @@
 [metadata]
 name = antiberty
-version = 0.0.1
+version = 0.0.3
+long-description = README.md
 
 [options]
-packages = antiberty
+packages = find:
 install_requires =
     einops>=0.3.0
     numpy>=1.21.2
     tokenizers>=0.10.2
     torch>=1.7.1
     transformers>=4.5.1
+include_package_data = True
