--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,7 @@
 [metadata]
 name = antiberty
 version = 0.0.3
-long-description = README.md
+long-description = file:README.md
 
 [options]
 packages = find:
