--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 [metadata]
 name = antiberty
 version = 0.0.4
-long-description = file:README.md
+long-description = file: README.md
+long_description_content_type = text/markdown
 
 [options]
 packages = find:
